# cozy_ex_dynamic

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
web/node/: dynamicnode.js
